# rust-protobuf

./: .gitignore  Cargo.toml
proto/: rustproto.proto
protobuf-codegen-pure-test2/: Cargo.toml
protobuf-codegen-pure-test2/src/: main.rs
protobuf-codegen/src/: customize.rs  enums.rs  lib.rs  message.rs  serde.rs
protobuf/src/: rustproto.rs
